# misc_snippets

./: .gitignore
algorithms/: README.md  merkle_tree.py
battery_life_estimator/: BATTERY_QUICK_START.md  battery-monitor.service  battery_monitor.py  battery_time  setup_battery_monitor.sh
contents/: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  recipe.yaml
contents/src/contents/: cli.py  core.py
contents/tests/: test_core.py
docker_resource_monitor/: .gitignore  README.md  compose.yaml  pixi.toml
favicon_fetcher/: README.md  favicon_fetcher.py  pixi.toml
file_backup/: compare_merkle_trees.py  generate_diff_list.py  merkle_tree.py  verify_backup.sh  verify_copied_files.py
file_monitor/: BUILD_GO.md  README.md  compare.sh  file_monitor.go  file_monitor.py  file_monitor_go  go.mod
file_tree/: TECHNICAL_SPEC.md  file_tree.py
kobo_screensaver_generator/: resize_and_crop.py
mojo_tests/: README.md
network_chaos_sim/: README.md  config.yaml  design_doc.md  docker-compose.yml  launch.py  pixi.toml
network_monitor/: README.md  mac_vendors.py  network_monitor.py  network_monitor_config.json.example  requirements.txt  test_mac_libraries.py
process_monitor/src/cadvisor_monitor/: package.xml  pixi.toml  setup.cfg  setup.py
process_monitor/src/cadvisor_monitor/cadvisor_monitor/: __init__.py  container_stats_publisher.py
process_monitor/src/cadvisor_monitor/launch_tests/: test_diagnostics_integration.py
process_monitor/src/cadvisor_monitor/test/: test_cadvisor_client.py  test_container_stats_publisher.py
process_monitor/src/cadvisor_monitor/tests/: test_cadvisor_client.py  test_container_stats_publisher.py
(+113 files in other folders)
