[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contents"
version = "0.1.0"
description = "Encode/decode a package's params and diagnostics YAML into deterministic image labels"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "docker",
    "pyyaml",
]

[project.scripts]
contents = "contents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
