<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cadvisor_monitor</name>
  <version>0.1.1</version>
  <description>ROS 2 node for publishing container metrics from cAdvisor</description>
  <maintainer email="jack@example.com">Jack</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>statistics_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>diagnostic_aggregator</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
